preload fonts to prevent font flickering

--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -3,12 +3,12 @@
   font-style: regular;
   font-weight: 400;
   font-display: swap;
-  src: url('../fonts/Sanomat-Web-Regular-Regular.ttf') format('truetype');
+  src: url('/fonts/Sanomat-Web-Regular-Regular.ttf') format('truetype');
 }
 @font-face {
   font-family: 'D-Din';
   font-style: regular;
   font-weight: 400;
   font-display: swap;
-  src: url('../fonts/D-Din-Regular.ttf')
+  src: url('/fonts/D-Din-Regular.ttf')
 }
